# tara

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench-history.csv  deny.toml
.github/workflows/: release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: nucleosynthesis.rs  spectral_analysis.rs  star_basics.rs
scripts/: bench-history.sh
src/: atmosphere.rs  bridge.rs  classification.rs  constants.rs  error.rs  evolution.rs  lib.rs  logging.rs  luminosity.rs  nucleosynthesis.rs  spectral.rs  sse.rs  star.rs
src/integration/: soorat.rs
tests/: integration.rs
