[package]
name = "tara"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Tara — stellar astrophysics engine for star classification, evolution, nucleosynthesis, and spectral analysis"
homepage = "https://github.com/MacCracken/tara"
repository = "https://github.com/MacCracken/tara"
readme = "README.md"
documentation = "https://docs.rs/tara"
keywords = ["stellar", "astrophysics", "stars", "spectral", "nucleosynthesis"]
categories = ["science", "simulation"]
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
soorat-compat = []
logging = ["dep:tracing-subscriber"]
optics = ["dep:prakash"]
thermal = ["dep:ushma"]
nuclear = ["dep:kimiya"]

[dependencies]
hisab = "1"
kimiya = { version = "1", optional = true }
prakash = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
ushma = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
